--- a/packages/core/src/common/_colors.scss
+++ b/packages/core/src/common/_colors.scss
@@ -5,7 +5,7 @@
 
 $black: #10161a !default;
 
-$dark-gray1: #182026 !default;
+$dark-gray1: #333333 !default;
 $dark-gray2: #202b33 !default;
 $dark-gray3: #293742 !default;
 $dark-gray4: #30404d !default;
@@ -20,7 +20,7 @@ $gray5: #bfccd6 !default;
 $light-gray1: #ced9e0 !default;
 $light-gray2: #d8e1e8 !default;
 $light-gray3: #e1e8ed !default;
-$light-gray4: #ebf1f5 !default;
+$light-gray4: #ffffff !default;
 $light-gray5: #f5f8fa !default;
 
 $white: #ffffff !default;
