--- a/packages/core/src/components/button/_common.scss
+++ b/packages/core/src/components/button/_common.scss
@@ -3,12 +3,14 @@
 
 @import "../../common/mixins";
 @import "../../common/variables";
+@import "../../common/variables-hipa";
 @import "../progress-bar/common";
 
 $button-border-width: 1px !default;
-$button-padding: ($pt-grid-size / 2) $pt-grid-size !default;
-$button-padding-small: 0 ($pt-grid-size * 0.7) !default;
-$button-padding-large: ($pt-grid-size / 2) ($pt-grid-size * 1.5) !default;
+$button-padding-x: $hipa-grid-size * 2.5 !default;
+$button-padding: $hipa-grid-size $button-padding-x !default;
+$button-padding-small: $hipa-grid-size * 0.5 $button-padding-x !default;
+$button-padding-large: $hipa-grid-size * 1.5 $button-padding-x !default;
 $button-icon-spacing: ($pt-button-height - $pt-icon-size-standard) / 2 !default;
 $button-icon-spacing-large: ($pt-button-height-large - $pt-icon-size-large) / 2 !default;
 
@@ -89,12 +91,60 @@ $button-outlined-width: 1px !default;
 $button-outlined-border-intent-opacity: 0.6 !default;
 $button-outlined-border-disabled-intent-opacity: 0.2 !default;
 
-// "intent": (default, hover, active colors)
+// "intent": (default, hover, active, disabled, colors)
 $button-intents: (
-  "primary": ($pt-intent-primary, $blue2, $blue1),
-  "success": ($pt-intent-success, $green2, $green1),
-  "warning": ($pt-intent-warning, $orange2, $orange1),
-  "danger": ($pt-intent-danger, $red2, $red1)
+  "primary": (
+    $hipa-button-bg-primary,
+    $hipa-button-bg-hover-primary,
+    $hipa-button-bg-active-primary,
+    $hipa-button-bg-disabled-primary
+  ),
+  "success": (
+    $hipa-button-bg-success,
+    $hipa-button-bg-hover-success,
+    $hipa-button-bg-active-success,
+    $hipa-button-bg-disabled-success
+  ),
+  "warning": (
+    $hipa-button-bg-warning,
+    $hipa-button-bg-hover-warning,
+    $hipa-button-bg-active-warning,
+    $hipa-button-bg-disabled-warning
+  ),
+  "danger": (
+    $hipa-button-bg-danger,
+    $hipa-button-bg-hover-danger,
+    $hipa-button-bg-active-danger,
+    $hipa-button-bg-disabled-danger
+  ),
+) !default;
+
+// "intent": (text, disabled_text, hover, active colors)
+$button-minimal-intents: (
+  "primary": (
+    $hipa-button-bg-primary,
+    $hipa-button-bg-hover-minimal-primary,
+    $hipa-button-bg-hover-minimal-primary,
+    $hipa-button-bg-active-minimal-primary
+  ),
+  "success": (
+    $hipa-button-bg-success,
+    $hipa-button-bg-hover-minimal-success,
+    $hipa-button-bg-hover-minimal-success,
+    $hipa-button-bg-active-minimal-success
+  ),
+  "warning": (
+    $hipa-button-bg-warning,
+    $hipa-button-bg-hover-minimal-warning,
+    $hipa-button-bg-hover-minimal-warning,
+    $hipa-button-bg-active-minimal-warning
+  ),
+  "danger": (
+    $hipa-button-bg-danger,
+    $hipa-button-bg-hover-minimal-danger,
+    $hipa-button-bg-hover-minimal-danger,
+    $hipa-button-bg-active-minimal-danger
+  ),
 ) !default;
 
 @mixin pt-button-base() {
@@ -102,10 +152,11 @@ $button-intents: (
   align-items: center;
 
   border: none;
-  border-radius: $pt-border-radius;
+  border-radius: $hipa-border-radius;
   cursor: pointer;
-  font-size: $pt-font-size;
+  font-size: $hipa-button-font-size;
   justify-content: center;
+  line-height: $hipa-line-height1;
   padding: $button-padding;
   text-align: left;
   vertical-align: middle;
@@ -119,7 +170,6 @@ $button-intents: (
 @mixin pt-button-height-large() {
   @include pt-button-height($pt-button-height-large);
   @include pt-flex-margin(row, $button-icon-spacing-large);
-  font-size: $pt-font-size-large;
   padding: $button-padding-large;
 }
 
@@ -134,10 +184,20 @@ $button-intents: (
 }
 
 @mixin pt-button() {
-  background-color: $button-background-color;
-  background-image: $button-gradient;
-  box-shadow: $button-box-shadow;
-  color: $pt-text-color;
+  background-color: $white;
+  box-shadow:
+    inset 0 1px 0 0 $hipa-button-border-none,
+    inset 0 -1px 0 0 $hipa-button-border-none,
+    inset -1px 0 0 0 $hipa-button-border-none,
+    inset 1px 0 0 0 $hipa-button-border-none;
+  color: $hipa-button-text-none;
+
+  &[class*="-minimal"],
+  &[class*="-minimal"]:hover,
+  &[class*="-minimal"]:active,
+  &[class*="-minimal"]:disabled {
+    box-shadow: none;
+  }
 
   &:hover {
     @include pt-button-hover();
@@ -155,138 +215,49 @@ $button-intents: (
 }
 
 @mixin pt-button-hover() {
-  background-clip: padding-box;
-  background-color: $button-background-color-hover;
-  box-shadow: $button-box-shadow;
+  box-shadow:
+    inset 0 1px 0 0 $hipa-button-border-hover-none,
+    inset 0 -1px 0 0 $hipa-button-border-hover-none,
+    inset -1px 0 0 0 $hipa-button-border-hover-none,
+    inset 1px 0 0 0 $hipa-button-border-hover-none;
 }
 
 @mixin pt-button-active() {
-  background-color: $button-background-color-active;
-  background-image: none;
-  box-shadow: $button-box-shadow-active;
+  box-shadow:
+    inset 0 1px 0 0 $hipa-button-border-active-none,
+    inset 0 -1px 0 0 $hipa-button-border-active-none,
+    inset -1px 0 0 0 $hipa-button-border-active-none,
+    inset 1px 0 0 0 $hipa-button-border-active-none;
 }
 
 @mixin pt-button-disabled() {
-  background-color: $button-background-color-disabled;
-  background-image: none;
-  box-shadow: none;
-  color: $button-color-disabled;
+  box-shadow:
+    inset 0 1px 0 0 $hipa-button-border-disabled-none,
+    inset 0 -1px 0 0 $hipa-button-border-disabled-none,
+    inset -1px 0 0 0 $hipa-button-border-disabled-none,
+    inset 1px 0 0 0 $hipa-button-border-disabled-none;
+  color: $hipa-button-text-disabled-none;
   cursor: not-allowed;
   outline: none;
-
-  &.#{$ns}-active,
-  &.#{$ns}-active:hover {
-    background: $button-background-color-active-disabled;
-  }
 }
 
-@mixin pt-button-intent($default-color, $hover-color, $active-color) {
+@mixin pt-button-intent($default-color, $hover-color, $active-color, $disabled-color) {
   background-color: $default-color;
-  background-image: $button-intent-gradient;
-  box-shadow: $button-intent-box-shadow;
   color: $white;
 
   &:hover,
-  &:active,
-  &.#{$ns}-active {
-    color: $white;
-  }
-
-  &:hover {
+  &.#{$ns}-hover {
     background-color: $hover-color;
-    box-shadow: $button-intent-box-shadow;
   }
 
   &:active,
   &.#{$ns}-active {
     background-color: $active-color;
-    background-image: none;
-    box-shadow: $button-intent-box-shadow-active;
   }
 
   &:disabled,
   &.#{$ns}-disabled {
-    @include pt-button-intent-disabled($default-color);
-  }
-}
-
-@mixin pt-button-intent-disabled($default-color) {
-  background-color: rgba($default-color, 0.5);
-  background-image: none;
-  border-color: transparent;
-  box-shadow: none;
-  color: $button-intent-color-disabled;
-}
-
-@mixin pt-dark-button() {
-  background-color: $dark-button-background-color;
-  background-image: $dark-button-gradient;
-  box-shadow: $dark-button-box-shadow;
-  color: $pt-dark-text-color;
-
-  &:hover,
-  &:active,
-  &.#{$ns}-active {
-    color: $pt-dark-text-color;
-  }
-
-  &:hover {
-    @include pt-dark-button-hover();
-  }
-
-  &:active,
-  &.#{$ns}-active {
-    @include pt-dark-button-active();
-  }
-
-  &:disabled,
-  &.#{$ns}-disabled {
-    @include pt-dark-button-disabled();
-  }
-
-  .#{$ns}-button-spinner .#{$ns}-spinner-head {
-    background: $dark-progress-track-color;
-    stroke: $dark-progress-head-color;
-  }
-}
-
-@mixin pt-dark-button-hover() {
-  background-color: $dark-button-background-color-hover;
-  box-shadow: $dark-button-box-shadow;
-}
-
-@mixin pt-dark-button-active() {
-  background-color: $dark-button-background-color-active;
-  background-image: none;
-  box-shadow: $dark-button-box-shadow-active;
-}
-
-@mixin pt-dark-button-disabled() {
-  background-color: $dark-button-background-color-disabled;
-  background-image: none;
-  box-shadow: none;
-  color: $dark-button-color-disabled;
-
-  &.#{$ns}-active {
-    background: $dark-button-background-color-active-disabled;
-  }
-}
-
-@mixin pt-dark-button-intent() {
-  box-shadow: $dark-button-intent-box-shadow;
-
-  &:hover {
-    box-shadow: $dark-button-intent-box-shadow;
-  }
-
-  &:active,
-  &.#{$ns}-active {
-    box-shadow: $dark-button-intent-box-shadow-active;
-  }
-
-  &:disabled,
-  &.#{$ns}-disabled {
-    @include pt-dark-button-intent-disabled();
+    background-color: $disabled-color;
   }
 }
 
@@ -297,47 +268,32 @@ $button-intents: (
 }
 
 @mixin pt-button-minimal() {
-  background: $minimal-button-background-color;
+  background: none;
   box-shadow: none;
+  color: $hipa-button-minimal-text-none;
 
   &:hover {
-    background: $minimal-button-background-color-hover;
+    background: $hipa-button-minimal-bg-hover-none;
     box-shadow: none;
-    color: $pt-text-color;
     text-decoration: none;
   }
 
   &:active,
   &.#{$ns}-active {
-    background: $minimal-button-background-color-active;
+    background: $hipa-button-minimal-bg-active-none;
     box-shadow: none;
-    color: $pt-text-color;
   }
 
   &:disabled,
-  &:disabled:hover,
-  &.#{$ns}-disabled,
-  &.#{$ns}-disabled:hover {
+  &.#{$ns}-disabled {
     background: none;
-    color: $pt-text-color-disabled;
+    color: $hipa-button-minimal-text-disabled-none;
     cursor: not-allowed;
-
-    &.#{$ns}-active {
-      background: $minimal-button-background-color-active;
-    }
   }
 
-  .#{$ns}-dark & {
-    @include pt-dark-button-minimal();
-  }
-
-  @each $intent, $colors in $button-intents {
+  @each $intent, $colors in $button-minimal-intents {
     &.#{$ns}-intent-#{$intent} {
-      @include pt-button-minimal-intent(
-        map-get($pt-intent-colors, $intent),
-        map-get($pt-intent-text-colors, $intent),
-        map-get($pt-dark-intent-text-colors, $intent)
-      );
+      @include pt-button-minimal-intent($colors...);
     }
   }
 }
@@ -378,65 +334,33 @@ $button-intents: (
   }
 }
 
-@mixin pt-button-minimal-intent($intent-color, $text-color, $dark-text-color) {
-  color: $text-color;
+@mixin pt-button-minimal-intent($text, $text-disabled, $hover, $active) {
+  color: $text;
 
   &:hover,
   &:active,
   &.#{$ns}-active {
     background: none;
     box-shadow: none;
-    color: $text-color;
   }
 
   &:hover {
-    background: rgba($intent-color, 0.15);
-    color: $text-color;
+    background: $hover;
   }
 
   &:active,
   &.#{$ns}-active {
-    background: rgba($intent-color, 0.3);
-    color: $text-color;
+    background: $active;
   }
 
   &:disabled,
   &.#{$ns}-disabled {
     background: none;
-    color: rgba($text-color, 0.5);
-
-    &.#{$ns}-active {
-      background: rgba($intent-color, 0.3);
-    }
+    color: $text-disabled;
   }
 
   .#{$ns}-button-spinner .#{$ns}-spinner-head {
-    stroke: $text-color;
-  }
-
-  .#{$ns}-dark & {
-    color: $dark-text-color;
-
-    &:hover {
-      background: rgba($intent-color, 0.2);
-      color: $dark-text-color;
-    }
-
-    &:active,
-    &.#{$ns}-active {
-      background: rgba($intent-color, 0.3);
-      color: $dark-text-color;
-    }
-
-    &:disabled,
-    &.#{$ns}-disabled {
-      background: none;
-      color: rgba($dark-text-color, 0.5);
-
-      &.#{$ns}-active {
-        background: rgba($intent-color, 0.3);
-      }
-    }
+    stroke: $text;
   }
 }
 
