--- a/packages/core/src/components/dialog/_dialog.scss
+++ b/packages/core/src/components/dialog/_dialog.scss
@@ -5,6 +5,7 @@
 @import "../../common/mixins";
 @import "../../common/react-transition";
 @import "../../common/variables";
+@import "../../common/variables-hipa";
 
 /*
 Dialog
@@ -34,9 +35,9 @@ Markup:
 Styleguide dialog
 */
 
-$dialog-border-radius: $pt-border-radius * 2 !default;
-$dialog-margin: ($pt-grid-size * 3) 0 !default;
-$dialog-padding: $pt-grid-size * 2 !default;
+$dialog-border-radius: $hipa-border-radius * 2 !default;
+$dialog-margin: ($hipa-grid-size * 3) 0 !default;
+$dialog-padding: $hipa-grid-size * 2 !default;
 
 .#{$ns}-dialog-container {
   $dialog-transition-props: (
@@ -64,14 +65,13 @@ $dialog-padding: $pt-grid-size * 2 !default;
 .#{$ns}-dialog {
   background: $light-gray4;
   border-radius: $dialog-border-radius;
-  box-shadow: $pt-dialog-box-shadow;
   display: flex;
   flex-direction: column;
   margin: $dialog-margin;
-  padding-bottom: $pt-grid-size * 2;
+  padding-bottom: $hipa-grid-size * 2;
   pointer-events: all;
   user-select: text;
-  width: $pt-grid-size * 50;
+  width: $hipa-grid-size * 50;
 
   &:focus {
     outline: 0;
@@ -89,10 +89,10 @@ $dialog-padding: $pt-grid-size * 2 !default;
   align-items: center;
   background: $white;
   border-radius: $dialog-border-radius $dialog-border-radius 0 0;
-  box-shadow: 0 1px 0 $pt-divider-black;
+  box-shadow: inset 0 -1px 0 $hipa-border-color;
   display: flex;
   flex: 0 0 auto;
-  min-height: $pt-icon-size-large + $dialog-padding;
+  min-height: $hipa-grid-size * 6;
   padding-left: $dialog-padding;
   padding-right: $dialog-padding / 4;
   z-index: $pt-z-index-dialog-header;
@@ -107,7 +107,6 @@ $dialog-padding: $pt-grid-size * 2 !default;
   .#{$ns}-heading {
     @include overflow-ellipsis();
     flex: 1 1 auto;
-    line-height: inherit;
     margin: 0;
 
     &:last-child {
@@ -128,7 +127,7 @@ $dialog-padding: $pt-grid-size * 2 !default;
 
 .#{$ns}-dialog-body {
   flex: 1 1 auto;
-  line-height: $pt-grid-size * 1.8;
+  line-height: $hipa-grid-size * 1.8;
   margin: $dialog-padding;
 }
 
@@ -142,6 +141,6 @@ $dialog-padding: $pt-grid-size * 2 !default;
   justify-content: flex-end;
 
   .#{$ns}-button {
-    margin-left: $pt-grid-size;
+    margin-left: $hipa-grid-size * 1.5;
   }
 }
