--- a/packages/core/src/common/_colors-hipa.scss
+++ b/packages/core/src/common/_colors-hipa.scss
@@ -1,38 +1,41 @@
 $hipa-white: #ffffff;
 $hipa-black: #000000;
 
-$hipa-blue100: #007AA9;
-$hipa-blue200: #008ABE;
-$hipa-blue300: #0099D3;
-$hipa-blue400: #B3E0F2;
-$hipa-blue500: #CCEBF6;
-$hipa-blue600: #EDF8FC;
+$hipa-blue-dark-100: #007AA9;
+$hipa-blue-dark-200: #008ABE;
+$hipa-blue-dark-300: #0099D3;
+$hipa-blue-dark-400: #64AFCC;
+$hipa-blue-dark-500: #82C4DD;
+$hipa-blue-100: #B3E0F2;
+$hipa-blue-200: #CCEBF6;
+$hipa-blue-300: #E0F3FA;
+$hipa-blue-400: #EDF8FC;
 
-$hipa-green100: #00A285;
-$hipa-green200: #00AC8C;
-$hipa-green300: #00BF9C;
-$hipa-green400: #99E5D7;
-$hipa-green500: #B3ECE1;
+$hipa-green-100: #00A285;
+$hipa-green-200: #00AC8C;
+$hipa-green-300: #00BF9C;
+$hipa-green-400: #99E5D7;
+$hipa-green-500: #B3ECE1;
 
-$hipa-orange100: #E06710;
-$hipa-orange200: #EB6C11;
-$hipa-orange300: #FF7512;
-$hipa-orange400: #FFC8A0;
-$hipa-orange500: #FFD6B8;
+$hipa-orange-100: #E06710;
+$hipa-orange-200: #EB6C11;
+$hipa-orange-300: #FF7512;
+$hipa-orange-400: #FFC8A0;
+$hipa-orange-500: #FFD6B8;
 
-$hipa-red100: #D94654;
-$hipa-red200: #E64A59;
-$hipa-red300: #FF5263;
-$hipa-red400: #FFBAC1;
-$hipa-red500: #FFCBD0;
+$hipa-red-100: #D94654;
+$hipa-red-200: #E64A59;
+$hipa-red-300: #FF5263;
+$hipa-red-400: #FFBAC1;
+$hipa-red-500: #FFCBD0;
 
-$hipa-gray100: #333333;
-$hipa-gray200: #666666;
-$hipa-gray300: #777777;
-$hipa-gray400: #999999;
-$hipa-gray500: #9F9F9F;
-$hipa-gray600: #C0C0C0;
-$hipa-gray700: #E6E6E6;
-$hipa-gray800: #F0F0F0;
-$hipa-gray900: #F6F6F6;
-$hipa-gray1000: #F9F9F9;
+$hipa-gray-dark-100: #333333;
+$hipa-gray-dark-200: #666666;
+$hipa-gray-dark-300: #777777;
+$hipa-gray-dark-400: #999999;
+$hipa-gray-dark-500: #9F9F9F;
+$hipa-gray-100: #C0C0C0;
+$hipa-gray-200: #E6E6E6;
+$hipa-gray-300: #F0F0F0;
+$hipa-gray-400: #F6F6F6;
+$hipa-gray-500: #F9F9F9;
