--- a/packages/core/src/components/dialog/_dialog.scss
+++ b/packages/core/src/components/dialog/_dialog.scss
@@ -63,7 +63,7 @@ $dialog-padding: $hipa-grid-size * 2 !default;
 }
 
 .#{$ns}-dialog {
-  background: $light-gray4;
+  background: $hipa-white;
   border-radius: $dialog-border-radius;
   display: flex;
   flex-direction: column;
@@ -76,18 +76,11 @@ $dialog-padding: $hipa-grid-size * 2 !default;
   &:focus {
     outline: 0;
   }
-
-  &.#{$ns}-dark,
-  .#{$ns}-dark & {
-    background: $pt-dark-app-background-color;
-    box-shadow: $pt-dark-dialog-box-shadow;
-    color: $pt-dark-text-color;
-  }
 }
 
 .#{$ns}-dialog-header {
   align-items: center;
-  background: $white;
+  background: $hipa-white;
   border-radius: $dialog-border-radius $dialog-border-radius 0 0;
   box-shadow: inset 0 -1px 0 $hipa-border-color;
   display: flex;
