--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -25,6 +25,8 @@ $hipa-input-height-small: $hipa-grid-size * 3.5 !default;
 
 $hipa-input-text-disabled: $hipa-gray-100;
 $hipa-input-bg-disabled: $hipa-gray-500;
+$hipa-input-bg-hover: $hipa-gray-500;
+$hipa-input-bg-active: $hipa-gray-300;
 
 $hipa-font-size-primary: $hipa-font-size3;
 $hipa-font-size-small: $hipa-font-size2;
