--- a/packages/core/src/components/button/_common.scss
+++ b/packages/core/src/components/button/_common.scss
@@ -24,11 +24,14 @@ CSS `border` property issues:
 `box-shadow` doesn't have these issues, we're using it instead of `border`.
 */
 $button-box-shadow:
-  inset 0 0 0 $button-border-width rgba($black, 0.2),
-  inset 0 (-$button-border-width) 0 rgba($black, 0.1) !default;
-$button-box-shadow-active:
-  inset 0 0 0 $button-border-width rgba($black, 0.2),
-  inset 0 1px 2px rgba($black, 0.2) !default;
+  inset 0 0 0 $button-border-width $hipa-border-color,
+  inset 0 (-$button-border-width) 0 $hipa-border-color !default;
+$button-box-shadow-hover:
+  inset 0 0 0 $button-border-width $hipa-border-hover-color,
+  inset 0 $button-border-width 0 $hipa-border-hover-color !default;
+$button-box-shadow-disabled:
+  inset 0 0 0 $button-border-width $hipa-input-text-disabled,
+  inset 0 $button-border-width 0 $hipa-input-text-disabled !default;
 $button-intent-box-shadow:
   inset 0 0 0 $button-border-width rgba($black, 0.4),
   inset 0 (-$button-border-width) 0 rgba($black, 0.2) !default;
