--- a/packages/core/src/_reset.scss
+++ b/packages/core/src/_reset.scss
@@ -2,6 +2,7 @@
 // Licensed under the Apache License, Version 2.0.
 
 @import "common/variables";
+@import "common/variables-hipa";
 @import "common/mixins";
 
 // Apply a natural box layout model to all elements, but allow components to change as necessary
@@ -21,7 +22,7 @@ html {
 body {
   @include base-typography();
   color: $pt-text-color;
-  font-family: $pt-font-family;
+  font-family: $hipa-font-family;
 }
 
 p {
