fix IconName types; add icon resources;

--- a/packages/core/src/components/button/_button.scss
+++ b/packages/core/src/components/button/_button.scss
@@ -118,6 +118,7 @@ Styleguide button
 
   #{$icon-classes} {
     color: $hipa-currentColor;
+    margin-right: 4px;
 
     &.#{$ns}-align-right {
       margin-left: $button-icon-spacing;
