--- a/packages/core/src/components/forms/_common.scss
+++ b/packages/core/src/components/forms/_common.scss
@@ -101,7 +101,7 @@ $control-group-stack: (
   appearance: none;
   background: $input-background-color;
   border-radius: $hipa-border-radius;
-  color: $hipa-gray-dark-100;
+  color: $hipa-text-color;
   font-size: $hipa-font-size-primary;
   font-weight: $input-font-weight;
   height: $hipa-input-height;
