--- a/packages/core/src/common/_variables-hipa.scss
+++ b/packages/core/src/common/_variables-hipa.scss
@@ -45,6 +45,9 @@ $hipa-button-height-small: $hipa-grid-size * 3.5 !default;
 $hipa-button-height-smaller: $hipa-grid-size * 3.5 !default;
 $hipa-button-height-large: $hipa-grid-size * 4.5 !default;
 
+// Colors
+$hipa-text-color: $hipa-gray-dark-100;
+
 // Labels
 $hipa-label-text-color: $hipa-gray-dark-300;
 
@@ -103,6 +106,11 @@ $hipa-button-bg-active-danger: $hipa-red-100;
 $hipa-button-bg-active-minimal-danger: $hipa-red-400;
 $hipa-button-bg-disabled-danger: $hipa-red-400;
 
+$hipa-button-bg-none: $hipa-white;
+$hipa-button-bg-hover-none: $hipa-gray-400;
+$hipa-button-bg-active-none: $hipa-gray-300;
+$hipa-button-bg-disabled-none: $hipa-white;
+
 $hipa-button-minimal-text-none: $hipa-gray-dark-200;
 $hipa-button-minimal-text-disabled-none: $hipa-gray-200;
 $hipa-button-minimal-bg-hover-none: $hipa-gray-400;
@@ -113,3 +121,6 @@ $hipa-border-hover-color: $hipa-gray-100;
 $hipa-border-active-color: $hipa-blue-dark-300;
 
 $hipa-placeholder-color: $hipa-gray-dark-500;
+
+// shadows
+$hipa-popover-box-shadow: 0px 4px 15px rgba(17, 3, 0, 0.08);
