--- a/packages/core/src/components/menu/_common.scss
+++ b/packages/core/src/components/menu/_common.scss
@@ -1,5 +1,7 @@
 // Copyright 2016 Palantir Technologies, Inc. All rights reserved.
 // Licensed under the Apache License, Version 2.0.
+@import "../../common/variables";
+@import "../../common/variables-hipa";
 
 $half-grid-size: $pt-grid-size / 2 !default;
 
@@ -15,7 +17,7 @@ $menu-item-line-height: round($pt-font-size * $menu-item-line-height-factor);
 $menu-item-line-height-large: round($pt-font-size-large * $menu-item-line-height-factor);
 
 $menu-min-width: $pt-grid-size * 18 !default;
-$menu-item-padding: ($pt-button-height - $pt-icon-size-standard) / 2 !default;
+$menu-item-padding: 8px !default;
 $menu-item-padding-large: ($pt-button-height-large - $pt-icon-size-large) / 2 !default;
 $menu-item-padding-vertical: ($pt-button-height - $menu-item-line-height) / 2 !default;
 $menu-item-padding-vertical-large:
@@ -24,8 +26,8 @@ $menu-item-padding-vertical-large:
 $menu-background-color: $white !default;
 $dark-menu-background-color: $dark-gray4 !default;
 
-$menu-item-color-hover: $minimal-button-background-color-hover !default;
-$menu-item-color-active: $minimal-button-background-color-active !default;
+$menu-item-color-hover: $hipa-button-bg-hover-none !default;
+$menu-item-color-active: $hipa-button-bg-active-none !default;
 $dark-menu-item-color-hover: $dark-minimal-button-background-color-hover !default;
 $dark-menu-item-color-active: $dark-minimal-button-background-color-active !default;
 
@@ -33,12 +35,13 @@ $dark-menu-item-color-active: $dark-minimal-button-background-color-active !defa
 // setting modifier to "" will generally apply it as default styles due to & selectors
 
 @mixin menu-item($disabled-selector: ".#{$ns}-disabled", $hover-selector: ":hover") {
-  @include pt-flex-container(row, $menu-item-padding);
-  align-items: flex-start;
+  @include pt-flex-container(row, $menu-item-padding / 2);
+  align-items: center;
   border-radius: $menu-item-border-radius;
   color: inherit;
+  height: 36px;
   line-height: $menu-item-line-height;
-  padding: $menu-item-padding-vertical $menu-item-padding;
+  padding: 0 $menu-item-padding;
   text-decoration: none;
   user-select: none;
 
