--- a/packages/core/src/components/menu/_menu.scss
+++ b/packages/core/src/components/menu/_menu.scss
@@ -2,6 +2,7 @@
 // Licensed under the Apache License, Version 2.0.
 
 @import "../../common/variables";
+@import "../../common/variables-hipa";
 @import "~@blueprintjs/icons/src/icons";
 @import "../../common/mixins";
 
@@ -36,11 +37,11 @@ Styleguide menu
 .#{$ns}-menu {
   background: $menu-background-color;
   border-radius: $pt-border-radius;
-  color: $pt-text-color;
+  color: $hipa-text-color;
   list-style: none;
   margin: 0;
   min-width: $menu-min-width;
-  padding: $half-grid-size;
+  padding: $hipa-grid-size / 2 0;
   text-align: left;
 }
 
@@ -61,7 +62,6 @@ Styleguide menu
   &::before,
   > .#{$ns}-icon {
     color: $pt-icon-color;
-    margin-top: ($menu-item-line-height - $pt-icon-size-standard) / 2;
   }
 
   .#{$ns}-menu-item-label {
