--- a/packages/core/src/components/popover/_popover.scss
+++ b/packages/core/src/components/popover/_popover.scss
@@ -4,6 +4,8 @@
 @import "./common";
 
 $popover-width: $pt-grid-size * 35 !default;
+$popover-border-radius: $hipa-border-radius * 2;
+$popover-border: 1px solid $hipa-border-color;
 
 .#{$ns}-popover {
   @include popover-sizing(
@@ -14,17 +16,16 @@ $popover-width: $pt-grid-size * 35 !default;
   @include popover-appearance(
     $popover-background-color,
     inherit,
-    $pt-popover-box-shadow,
-    $pt-drop-shadow-opacity,
-    $pt-border-shadow-opacity
+    $hipa-popover-box-shadow,
+    $popover-border
   );
   @include scale-transition();
-  border-radius: $pt-border-radius;
+  border-radius: $popover-border-radius;
   display: inline-block;
   z-index: $pt-z-index-overlay;
 
   .#{$ns}-popover-content {
-    border-radius: $pt-border-radius;
+    border-radius: $popover-border-radius;
     position: relative;
   }
 
@@ -67,8 +68,7 @@ $popover-width: $pt-grid-size * 35 !default;
       $dark-popover-background-color,
       inherit,
       $pt-dark-popover-box-shadow,
-      $pt-dark-drop-shadow-opacity,
-      $pt-dark-border-shadow-opacity
+      none
     );
   }
 }
